added http-server and index structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS + Animations</title>
-  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="./examples/css/reset.css">
 </head>
 <body>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde et ullam consectetur atque quis inventore, maiores sint ipsa veritatis optio!
+  <ol>
+    <li><a href="./examples/example1.html">Example 1</a></li>
+  </ol>
 </body>
 </html>
