updated page titles

--- a/examples/vars_manipulation.html
+++ b/examples/vars_manipulation.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dani Vicario // CSS - Animations 2h Workshop</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/generic.css">
   <link rel="stylesheet" href="./css/vars_manipulation.css">
@@ -24,8 +24,6 @@
 
       root.style.setProperty('--color', xxx);
     }, 500)
-
-    // root.style.setProperty('--color', `rgba(0,0, 255, 1)`);
   </script>
 </body>
 
