--- a/examples/multicreation.html
+++ b/examples/multicreation.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dani Vicario // CSS - Animations 2h Workshop</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/generic.css">
   <link rel="stylesheet" href="./css/multicreation.css">
