separated js files

--- a/examples/spiral.html
+++ b/examples/spiral.html
@@ -7,11 +7,11 @@
   <title>Dani Vicario // CSS - Animations 2h Workshop</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/generic.css">
-  <link rel="stylesheet" href="./css/multicreation.css">
+  <link rel="stylesheet" href="./css/spiral.css">
 </head>
 
 <body class="fullscreen flex">
-  <script src="./js/multicreation.js"></script>
+  <script src="./js/spiral.js"></script>
 </body>
 
 </html>
