--- a/examples/vars_manipulation.html
+++ b/examples/vars_manipulation.html
@@ -12,19 +12,7 @@
 
 <body>
   <div class="generic"></div>
-  <script>
-    let root = document.documentElement;
-
-    function randomInt(min, max) {
-      return Math.floor(Math.random() * (max - min + 1) + min);
-    }
-
-    setInterval(() => {
-      let xxx = `rgba(${randomInt(0, 255)}, ${randomInt(0, 255)}, ${randomInt(0, 255)}, 1)`
-
-      root.style.setProperty('--color', xxx);
-    }, 500)
-  </script>
+  <script src="./js/vars_manipulation.js"></script>
 </body>
 
 </html>
