--- a/examples/butterflies.html
+++ b/examples/butterflies.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Dani Vicario // CSS - Animations 2h Workshop</title>
+        <link rel="stylesheet" href="./css/reset.css" />
+        <link rel="stylesheet" href="./css/generic.css" />
+        <link rel="stylesheet" href="./css/butterflies.css" />
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dani Vicario // CSS - Animations 2h Workshop</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/generic.css">
-  <link rel="stylesheet" href="./css/butterflies.css">
-</head>
-
-<body class="fullscreen flex">
-  <script src="./js/butterflies.js"></script>
-</body>
-
+    <body class="fullscreen flex">
+        <div id="container"></div>
+        <script src="./js/butterflies.js"></script>
+    </body>
 </html>
